oxiplate-derive/tests/broken/for/for-super.stderr
error: proc-macro derive panicked
 --> tests/broken/for/for-super.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: super cannot be a raw identifier

error[E0277]: `Data` doesn't implement `std::fmt::Display`
  --> tests/broken/for/for-super.rs:12:9
   |
11 |           "{}",
   |            -- required by this formatting parameter
12 | /         Data {
13 | |             numbers: vec![19, 89],
14 | |         }
   | |_________^ `Data` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Data`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
